force-app/main/default/objects/leave_request__c/leave_request__c.object-meta.xml
<CustomObject>
    <label>leave request</label>
    <nameField>
        <label>leave request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>leave requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>