force-app/main/default/objects/leave_request__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>leave requests</relationshipLabel>
    <relationshipName>leave_requests</relationshipName>
    <type>Lookup</type>
</CustomField>