force-app/main/default/objects/leave_request__c/fields/leave_number__c.field-meta.xml
<CustomField>
    <fullName>leave_number__c</fullName>
    <label>leave number</label>
    <type>AutoNumber</type>
</CustomField>