force-app/main/default/objects/leave_request__c/fields/leave_reason__c.field-meta.xml
<CustomField>
    <fullName>leave_reason__c</fullName>
    <label>leave reason</label>
    <type>TextArea</type>
</CustomField>