force-app/main/default/objects/leave_request__c/fields/leave_type__c.field-meta.xml
<CustomField>
    <fullName>leave_type__c</fullName>
    <label>leave type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sick leave</fullName>
            </value>
            <value>
                <fullName>causal leave</fullName>
            </value>
            <value>
                <fullName>paid leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>