force-app/main/default/objects/leave_request__c/fields/number_of_days__c.field-meta.xml
<CustomField>
    <fullName>number_of_days__c</fullName>
    <label>number of days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>