force-app/main/default/objects/leave_request__c/fields/start__c.field-meta.xml
<CustomField>
    <fullName>start__c</fullName>
    <label>start date</label>
    <type>Date</type>
</CustomField>